<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/twenty_dp"
        android:text="@string/welcome"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/thirty_dp" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/twenty_dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/username_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/twenty_dp"
            android:text="@string/username"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/twenty_dp" />

        <TextView
            android:id="@+id/username_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/twenty_dp"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/twenty_dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout"
        android:layout_gravity="center"
        android:layout_margin="@dimen/twenty_dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/twenty_dp"
            android:text="@string/password"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/twenty_dp" />

        <TextView
            android:id="@+id/password_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/twenty_dp"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/twenty_dp" />

    </LinearLayout>

    <Button
        android:id="@+id/click_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_color"
        android:text="@string/click"
        android:textSize="@dimen/twenty_dp" />

</LinearLayout>