<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pista"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/forty_dp">

    <EditText
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/twenty_dp"
        android:background="@drawable/register_background"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:padding="@dimen/twenty_dp"
        android:textSize="@dimen/thirty_dp" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/twenty_dp"
        android:background="@drawable/register_background"
        android:hint="@string/hint_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:padding="@dimen/twenty_dp"
        android:textSize="@dimen/thirty_dp" />

    <Button
        android:id="@+id/register_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/submit"
        android:textColor="@color/white" />

</LinearLayout>