<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/admin_login_activity_main_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_color"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/forty_dp">

    <TextView
        android:id="@+id/username_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/twenty_dp"
        android:layout_marginTop="@dimen/fifty_dp"
        android:text="@string/username"
        android:textColor="@android:color/holo_red_light"
        android:textSize="@dimen/thirty_dp" />

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:padding="@dimen/ten_dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="@dimen/twenty_dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_dp"
        android:background="@android:color/holo_red_light" />

    <TextView
        android:id="@+id/password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/twenty_dp"
        android:paddingTop="@dimen/twenty_dp"
        android:text="@string/password"
        android:textColor="@android:color/holo_red_light"
        android:textSize="@dimen/thirty_dp" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/hint_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:padding="@dimen/ten_dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="@dimen/twenty_dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_dp"
        android:background="@android:color/holo_red_light" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/forty_dp"
        android:background="@drawable/login_background"
        android:padding="@dimen/five_dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/thirty_dp" />

</LinearLayout>

